syntax = "proto3";

package silenteight.agent.freetext.v1.api;

import "google/protobuf/duration.proto";

option java_package = "com.silenteight.proto.agent.freetext.v1.api";
option java_outer_classname = "FreeTextAgentApiProto";
option java_multiple_files = true;

service FreeTextAgent {
    rpc CompareFreeText (CompareFreeTextRequest) returns (stream CompareFreeTextResponse) {
    }
}

message CompareFreeTextRequest {
  string matched_name = 1;
  string matched_name_synonym = 2;
  string matched_type = 3;
  repeated string matching_texts = 4;
  string freetext = 5;
  string name_agent_instance_name = 6;
}

message CompareFreeTextResponse {
  string solution = 1;
  string context = 2;
}

